--- a/configs/baseline.yml
+++ b/configs/baseline.yml
@@ -5,14 +5,14 @@
 
 # The name of the task you are training
 task_type: "classification"
-# GPU or CPU
-device: "auto"
+# GPU(cuda) or CPU
+device: "cuda"
 # an identifyable name (suffix)
 experiment_name: None
 experiment_name_suffix: "test"
 # folder and file data is stored in
 data_folder: "./data"
-data_file: "blurbs.json"
+data_file: "blurbs3.json"
 # Random Seed to generate reproducable random things
 random_seed: 42
 
@@ -25,7 +25,7 @@ checkpoint_model: "uklfr/gottbert-base"
 # the tokenizer checkpoint to work from
 checkpoint_tokenizer: "uklfr/gottbert-base"
 #
-tokenizer_num_processes: 5
+tokenizer_num_processes: 10
 # Number of Workers
 workers: 2
 # load the best model after training
@@ -37,21 +37,23 @@ metric_used: "matthews_correlation"
 
 #try to get batch_size as high as possible
 batch_size: 5
-# Learning Rate
+gradient_accumulation_steps: 1
+# Learning Rate, 1e-05
 lr_rate: 1e-04
+#5.0e-1 = 0.5
 weight_decay: 5.0e-1
 # Warm up for the learning rate
 warm_up: 0.2
 lr_scheduler_type: "linear"
-epochs: 10
+epochs: 5
 oversampling: 0
 # Number of layers in the pretrained model to not train
 freeze_layer: 6
-label_smoothing: 0.0
+label_smoothing: 0
 # Custom Trainer
 custom_trainer: "TrainerDiceLoss"
 # Split Ratio
-split_ratio_train: 0.9
+split_ratio_train: 0.7
 
 # Should there be a tensorboard log?
 logging: True
