--- a/configs/hierarchical-baseline.yml
+++ b/configs/hierarchical-baseline.yml
@@ -12,7 +12,7 @@ experiment_name: "roberta-hierarchical"
 experiment_name_suffix: "test"
 # folder and file data is stored in
 data_folder: "./data"
-data_file: "blurbs.json"
+data_file: "part-blurbs"
 # Random Seed to generate reproducable random things
 random_seed: 42
 # only run subset dataset?
@@ -48,7 +48,7 @@ weight_decay: 5.0e-1
 # Warm up for the learning rate
 warm_up: 0.2
 lr_scheduler_type: "linear"
-epochs: 10
+epochs: 20
 oversampling: 0
 # Number of layers in the pretrained model to not train
 freeze_layer: 6
@@ -62,9 +62,9 @@ split_ratio_train: 0.75
 logging: True
 logging_strategy: "steps"
 #same as evaluatian steps
-logging_steps: 500
+logging_steps: 1000
 evaluation_strategy: "steps"
-evaluation_steps: 500
+evaluation_steps: 1000
 save_strategy: "steps"
-save_steps: 2500
+save_steps: 1000
 save_limits: 5
