--- a/configs/hierarchical-baseline.yml
+++ b/configs/hierarchical-baseline.yml
@@ -1,32 +1,30 @@
-# This file is used as a baseline
+# This file is used as a baseline for Hierarchical Classification
 # These are all the possible arguments to configure the trainer
 # Please changes the ones you want to change
 # and delete all options you do not want to call explicity
 
 # The name of the task you are training
-task_type: "classification"
+task_type: "hierarchical-classification"
 # GPU(cuda) or CPU
 device: "cuda"
 # an identifyable name (suffix)
 experiment_name: "roberta-hierarchical"
-experiment_name_suffix: "test"
+experiment_name_suffix: "freeze-08"
 # folder and file data is stored in
 data_folder: "./data"
 data_file: "part-blurbs"
 # Random Seed to generate reproducable random things
 random_seed: 42
-# only run subset dataset?
-test_run: False
-test_run_label_num: 10
 
 # The architecture of the model you're using
 architecture: "roberta"
 # Resume training
 resume_from_checkpoint: False
 # the checkpoint model to work from
-checkpoint_model: "uklfr/gottbert-base"
+checkpoint_torch_model: False 
+checkpoint_model: "uklfr/gottbert-base" 
 # the tokenizer checkpoint to work from
-checkpoint_tokenizer: "uklfr/gottbert-base"
+checkpoint_tokenizer: "uklfr/gottbert-base" 
 #
 tokenizer_num_processes: 10
 # Number of Workers
@@ -36,27 +34,29 @@ load_best: True
 # is a higher value better in the metric you use?
 greater_better: True
 # metric you want to use
-metric_used: "h_f1"
+metric_used: "h_f1" #weighted_f1_lvl_1
+drop_last: False
 
 #try to get batch_size as high as possible
-batch_size: 5
+batch_size: 8
 gradient_accumulation_steps: 1
 # Learning Rate, 1e-05
 lr_rate: 1e-04
 #5.0e-1 = 0.5
-weight_decay: 5.0e-1
+weight_decay: 3
 # Warm up for the learning rate
-warm_up: 0.2
+warm_up: 0.1
 lr_scheduler_type: "linear"
 epochs: 20
 oversampling: 0
 # Number of layers in the pretrained model to not train
-freeze_layer: 6
+freeze_layer: 8
 label_smoothing: 0
+hidden_dropout_prob: 0.1 #default: 0.1
 # Custom Trainer
-custom_trainer: "TrainerDiceLoss"
+custom_trainer: None #"TrainerDiceLoss"
 # Split Ratio
-split_ratio_train: 0.75
+split_ratio_train: 0.8
 
 # Should there be a tensorboard log?
 logging: True
@@ -67,4 +67,4 @@ evaluation_strategy: "steps"
 evaluation_steps: 1000
 save_strategy: "steps"
 save_steps: 1000
-save_limits: 5
+save_limits: 1
