--- a/configs/bert-flat-baseline.yml
+++ b/configs/bert-flat-baseline.yml
@@ -1,67 +1,70 @@
-# This file is used as a baseline
+# This file is used as a baseline for Hierarchical Classification
 # These are all the possible arguments to configure the trainer
 # Please changes the ones you want to change
 # and delete all options you do not want to call explicity
 
 # The name of the task you are training
-task_type: "classification"
+task_type: "flat-classification"
 # GPU(cuda) or CPU
 device: "cuda"
 # an identifyable name (suffix)
-experiment_name: None
-experiment_name_suffix: "test"
+experiment_name: "bert-flat"
+experiment_name_suffix: null
 # folder and file data is stored in
-data_folder: "./data"
-data_file: "blurbs"
+data_folder: "./data/blurbs_dataset"
+data_file: "blurbs_lvl3"
+# Optional; used to rename columns as label
+data_lvl: 1
 # Random Seed to generate reproducable random things
 random_seed: 42
 
 # The architecture of the model you're using
-architecture: "roberta"
+architecture: "bert"
 # Resume training
 resume_from_checkpoint: False
 # the checkpoint model to work from
-checkpoint_model: "uklfr/gottbert-base"
-# the tokenizer checkpoint to work from
-checkpoint_tokenizer: "uklfr/gottbert-base"
+checkpoint_torch_model: False 
+checkpoint_model_or_path: "lm_v007" 
 #
 tokenizer_num_processes: 10
 # Number of Workers
-workers: 0
+workers: 2
 # load the best model after training
 load_best: True
 # is a higher value better in the metric you use?
 greater_better: True
 # metric you want to use
-metric_used: "matthews_correlation"
+metric_used: "matthews_correlation" 
+drop_last: False
 
 #try to get batch_size as high as possible
-batch_size: 5
+batch_size: 64
 gradient_accumulation_steps: 1
 # Learning Rate, 1e-05
-lr_rate: 1e-04
+lr_rate: 5e-05
 #5.0e-1 = 0.5
-weight_decay: 5.0e-1
+weight_decay: 1
 # Warm up for the learning rate
-warm_up: 0.2
+warm_up: 0.1
 lr_scheduler_type: "linear"
-epochs: 5
+epochs: 20
 oversampling: 0
 # Number of layers in the pretrained model to not train
-freeze_layer: 6
+freeze_layer: 12
 label_smoothing: 0
+hidden_dropout_prob: 0.1 #default: 0.1
 # Custom Trainer
 custom_trainer: "TrainerDiceLoss"
 # Split Ratio
-split_ratio_train: 0.7
+split_ratio_train: 0.8
 
 # Should there be a tensorboard log?
 logging: True
 logging_strategy: "steps"
 #same as evaluatian steps
-logging_steps: 1000 
+logging_steps: 500
 evaluation_strategy: "steps"
-evaluation_steps: 1000
+evaluation_steps: 500
 save_strategy: "steps"
-save_steps: 5000
-save_limits: 5
+save_steps: 1000
+save_limits: 2
