--- a/configs/bert-hierarchical-baseline.yml
+++ b/configs/bert-hierarchical-baseline.yml
@@ -8,25 +8,25 @@ task_type: "hierarchical-classification"
 # GPU(cuda) or CPU
 device: "cuda"
 # an identifyable name (suffix)
-experiment_name: "roberta-hierarchical"
+experiment_name: "bert-hierarchical"
 experiment_name_suffix: null
 # folder and file data is stored in
 data_folder: "./data/blurbs_dataset"
-data_file: "blurbs_reduced"
+data_file: "blurbs_lvl3"
 # Random Seed to generate reproducable random things
 random_seed: 42
 
 # The architecture of the model you're using
-architecture: "roberta"
+architecture: "bert"
 # Resume training
 resume_from_checkpoint: False
 # the checkpoint model to work from
 checkpoint_torch_model: False 
-checkpoint_model_or_path: "uklfr/gottbert-base" 
+checkpoint_model_or_path: "lm_v007" 
 #
 tokenizer_num_processes: 10
 # Number of Workers
-workers: 0 # set to 0 when debugging
+workers: 2
 # load the best model after training
 load_best: True
 # is a higher value better in the metric you use?
@@ -36,25 +36,25 @@ metric_used: "h_f1"
 drop_last: False
 
 #try to get batch_size as high as possible
-batch_size: 8
+batch_size: 48
 gradient_accumulation_steps: 1
 # Learning Rate, 1e-05
 lr_rate: 5e-05
 #5.0e-1 = 0.5
-weight_decay: 2
+weight_decay: 1
 # Warm up for the learning rate
 warm_up: 0.1
 lr_scheduler_type: "linear"
 epochs: 20
 oversampling: 0
 # Number of layers in the pretrained model to not train
-freeze_layer: 8
+freeze_layer: 11
 label_smoothing: 0
 hidden_dropout_prob: 0.1 #default: 0.1
 # Custom Trainer
-custom_trainer: "TrainerLossNetwork" #"TrainerDiceLoss"
+custom_trainer: null #"TrainerDiceLoss"
 # Split Ratio
-split_ratio_train: 0.9
+split_ratio_train: 0.8
 
 # Should there be a tensorboard log?
 logging: True
@@ -64,5 +64,5 @@ logging_steps: 500
 evaluation_strategy: "steps"
 evaluation_steps: 500
 save_strategy: "steps"
-save_steps: 2000
-save_limits: 3
+save_steps: 1000
+save_limits: 2
