--- a/configs/bert-hierarchical-baseline.yml
+++ b/configs/bert-hierarchical-baseline.yml
@@ -12,7 +12,7 @@ experiment_name: "bert-hierarchical"
 experiment_name_suffix: null
 # folder and file data is stored in
 data_folder: "./data/blurbs_dataset"
-data_file: "blurbs_lvl3"
+data_file: "blurbs_lvl3.json"
 # Random Seed to generate reproducable random things
 random_seed: 42
 
