--- a/configs/bert-hierarchical-baseline.yml
+++ b/configs/bert-hierarchical-baseline.yml
@@ -12,7 +12,7 @@ experiment_name: "bert-hierarchical"
 experiment_name_suffix: null
 # folder and file data is stored in
 data_folder: "./data/blurbs_dataset"
-data_file: "blurbs_lvl3.json"
+data_file: "blurbs_lvl3_full.json"
 # Random Seed to generate reproducable random things
 random_seed: 42
 
@@ -26,7 +26,7 @@ checkpoint_model_or_path: "lm_v007"
 #
 tokenizer_num_processes: 10
 # Number of Workers
-workers: 2
+workers: 0
 # load the best model after training
 load_best: True
 # is a higher value better in the metric you use?
@@ -52,7 +52,7 @@ freeze_layer: 11
 label_smoothing: 0
 hidden_dropout_prob: 0.1 #default: 0.1
 # Custom Trainer
-custom_trainer: null #"TrainerDiceLoss"
+custom_trainer: "TrainerLossNetwork"
 # Split Ratio
 split_ratio_train: 0.8
 
