--- a/configs/hierarchical-baseline.yml
+++ b/configs/hierarchical-baseline.yml
@@ -12,7 +12,7 @@ experiment_name: "roberta-hierarchical"
 experiment_name_suffix: null
 # folder and file data is stored in
 data_folder: "./data/blurbs_dataset"
-data_file: "blurbs_reduced.json"
+data_file: "blurbs_reduced_full.json"
 # Random Seed to generate reproducable random things
 random_seed: 42
 
@@ -36,33 +36,33 @@ metric_used: "h_f1"
 drop_last: False
 
 #try to get batch_size as high as possible
-batch_size: 8
+batch_size: 24
 gradient_accumulation_steps: 1
 # Learning Rate, 1e-05
 lr_rate: 5e-05
 #5.0e-1 = 0.5
-weight_decay: 2
+weight_decay: 0.6
 # Warm up for the learning rate
 warm_up: 0.1
 lr_scheduler_type: "linear"
 epochs: 20
-oversampling: 0
+oversampling: 0.1
 # Number of layers in the pretrained model to not train
-freeze_layer: 8
+freeze_layer: 10
 label_smoothing: 0
 hidden_dropout_prob: 0.1 #default: 0.1
 # Custom Trainer
 custom_trainer: "TrainerLossNetwork" #"TrainerDiceLoss"
 # Split Ratio
-split_ratio_train: 0.9
+split_ratio_train: 0.8
 
 # Should there be a tensorboard log?
 logging: True
 logging_strategy: "steps"
 #same as evaluatian steps
-logging_steps: 500
+logging_steps: 50
 evaluation_strategy: "steps"
-evaluation_steps: 500
+evaluation_steps: 100
 save_strategy: "steps"
-save_steps: 2000
+save_steps: 1000
 save_limits: 3
