debugging for flat classification

--- a/configs/bert-flat-baseline.yml
+++ b/configs/bert-flat-baseline.yml
@@ -8,12 +8,11 @@ task_type: "flat-classification"
 # GPU(cuda) or CPU
 device: "cuda"
 # an identifyable name (suffix)
-experiment_name: "bert-flat"
+experiment_name: "dbmdz-flat"
 experiment_name_suffix: null
 # folder and file data is stored in
 data_folder: "./data/blurbs_dataset"
-data_file: "blurbs_lvl3"
-# Optional; used to rename columns as label
+data_file: "blurbs_reduced_full.json"
 data_lvl: 1
 # Random Seed to generate reproducable random things
 random_seed: 42
@@ -21,10 +20,10 @@ random_seed: 42
 # The architecture of the model you're using
 architecture: "bert"
 # Resume training
-resume_from_checkpoint: False
+resume_from_checkpoint: null
 # the checkpoint model to work from
 checkpoint_torch_model: False 
-checkpoint_model_or_path: "lm_v007" 
+checkpoint_model_or_path: "dbmdz/bert-base-german-cased"
 #
 tokenizer_num_processes: 10
 # Number of Workers
@@ -38,33 +37,33 @@ metric_used: "matthews_correlation"
 drop_last: False
 
 #try to get batch_size as high as possible
-batch_size: 64
+batch_size: 32
 gradient_accumulation_steps: 1
 # Learning Rate, 1e-05
-lr_rate: 5e-05
+lr_rate: 8e-05
 #5.0e-1 = 0.5
-weight_decay: 1
+weight_decay: 0.005
 # Warm up for the learning rate
 warm_up: 0.1
 lr_scheduler_type: "linear"
-epochs: 20
-oversampling: 0
+epochs: 30
+oversampling: 0.1
 # Number of layers in the pretrained model to not train
-freeze_layer: 12
+freeze_layer: 11
 label_smoothing: 0
 hidden_dropout_prob: 0.1 #default: 0.1
 # Custom Trainer
 custom_trainer: "TrainerDiceLoss"
 # Split Ratio
-split_ratio_train: 0.8
+split_ratio_train: 0.7
 
 # Should there be a tensorboard log?
 logging: True
 logging_strategy: "steps"
 #same as evaluatian steps
-logging_steps: 500
+logging_steps: 50
 evaluation_strategy: "steps"
-evaluation_steps: 500
+evaluation_steps: 100
 save_strategy: "steps"
 save_steps: 1000
-save_limits: 2
+save_limits: 3
