--- a/configs/hierarchical-baseline.yml
+++ b/configs/hierarchical-baseline.yml
@@ -8,7 +8,7 @@ task_type: "hierarchical-classification"
 # GPU(cuda) or CPU
 device: "cuda"
 # an identifyable name (suffix)
-experiment_name: "roberta-hierarchical"
+experiment_name: "roberta-dhc"
 experiment_name_suffix: null
 # folder and file data is stored in
 data_folder: "./data/blurbs_dataset"
@@ -19,10 +19,10 @@ random_seed: 42
 # The architecture of the model you're using
 architecture: "roberta"
 # Resume training
-resume_from_checkpoint: False
+resume_from_checkpoint: null
 # the checkpoint model to work from
 checkpoint_torch_model: False 
-checkpoint_model_or_path: "uklfr/gottbert-base" 
+checkpoint_model_or_path: "uklfr/gottbert-base"
 #
 tokenizer_num_processes: 10
 # Number of Workers
@@ -36,25 +36,25 @@ metric_used: "h_f1"
 drop_last: False
 
 #try to get batch_size as high as possible
-batch_size: 64
+batch_size: 32
 gradient_accumulation_steps: 1
 # Learning Rate, 1e-05
 lr_rate: 8e-05
 #5.0e-1 = 0.5
-weight_decay: 0.01
+weight_decay: 0.005
 # Warm up for the learning rate
 warm_up: 0.1
 lr_scheduler_type: "linear"
 epochs: 30
-oversampling: 0
+oversampling: 0.1
 # Number of layers in the pretrained model to not train
-freeze_layer: 12
+freeze_layer: 11
 label_smoothing: 0
 hidden_dropout_prob: 0.1 #default: 0.1
 # Custom Trainer
 custom_trainer: "TrainerLossNetwork" #"TrainerDiceLoss"
 # Split Ratio
-split_ratio_train: 0.8
+split_ratio_train: 0.7
 
 # Should there be a tensorboard log?
 logging: True
