--- a/configs/hierarchical-baseline.yml
+++ b/configs/hierarchical-baseline.yml
@@ -4,7 +4,7 @@
 # and delete all options you do not want to call explicity
 
 # The name of the task you are training
-task_type: "hierarchical-classification"
+task_type: "lcpn-hierarchical-classification"
 # GPU(cuda) or CPU
 device: "cuda"
 # an identifyable name (suffix)
@@ -36,23 +36,23 @@ metric_used: "h_f1"
 drop_last: False
 
 #try to get batch_size as high as possible
-batch_size: 32
+batch_size: 24
 gradient_accumulation_steps: 1
 # Learning Rate, 1e-05
-lr_rate: 8e-05
+lr_rate: 3e-05
 #5.0e-1 = 0.5
 weight_decay: 0.005
 # Warm up for the learning rate
 warm_up: 0.1
 lr_scheduler_type: "linear"
-epochs: 30
+epochs: 5
 oversampling: 0.1
 # Number of layers in the pretrained model to not train
-freeze_layer: 11
+freeze_layer: 10
 label_smoothing: 0
 hidden_dropout_prob: 0.1 #default: 0.1
 # Custom Trainer
-custom_trainer: "TrainerLossNetwork" #"TrainerDiceLoss"
+custom_trainer: None #"TrainerLossNetwork" #"TrainerDiceLoss"
 # Split Ratio
 split_ratio_train: 0.7
 
@@ -60,9 +60,9 @@ split_ratio_train: 0.7
 logging: True
 logging_strategy: "steps"
 #same as evaluatian steps
-logging_steps: 50
+logging_steps: 100
 evaluation_strategy: "steps"
-evaluation_steps: 100
+evaluation_steps: 500
 save_strategy: "steps"
-save_steps: 1000
+save_steps: 5000
 save_limits: 3
