--- a/configs/flat-baseline.yml
+++ b/configs/flat-baseline.yml
@@ -51,7 +51,8 @@ oversampling: 0.1
 # Number of layers in the pretrained model to not train
 freeze_layer: 10
 label_smoothing: 0
-hidden_dropout_prob: 0.1 #default: 0.1
+hidden_dropout_prob: 0.2 #default: 0.1
+attention_probs_dropout_prob: 0.2
 # Custom Trainer
 custom_trainer: "TrainerDiceLoss"
 # Split Ratio
@@ -63,7 +64,7 @@ logging_strategy: "steps"
 #same as evaluatian steps
 logging_steps: 100
 evaluation_strategy: "steps"
-evaluation_steps: 500
+evaluation_steps: 200
 save_strategy: "steps"
 save_steps: 1000
 save_limits: 3
