--- a/configs/lcpn-baseline.yml
+++ b/configs/lcpn-baseline.yml
@@ -32,7 +32,7 @@ load_best: True
 # is a higher value better in the metric you use?
 greater_better: True
 # metric you want to use
-metric_used: "h_f1" 
+metric_used: "loss" 
 drop_last: False
 
 #try to get batch_size as high as possible
@@ -50,8 +50,8 @@ oversampling: 0.05
 # Number of layers in the pretrained model to not train
 freeze_layer: 8
 label_smoothing: 0
-hidden_dropout_prob: 0.1 #default: 0.1
-attention_probs_dropout_prob: 0.5
+hidden_dropout_prob: 0.2 #default: 0.1
+attention_probs_dropout_prob: 0.2
 # Custom Trainer
 custom_trainer: None 
 # Split Ratio
@@ -61,9 +61,9 @@ split_ratio_train: 0.7
 logging: True
 logging_strategy: "steps"
 #same as evaluatian steps
-logging_steps: 200
+logging_steps: 100
 evaluation_strategy: "steps"
-evaluation_steps: 500
+evaluation_steps: 200
 save_strategy: "steps"
 save_steps: 5000
 save_limits: 3
