--- a/configs/rnn-baseline.yml
+++ b/configs/rnn-baseline.yml
@@ -32,7 +32,7 @@ load_best: True
 # is a higher value better in the metric you use?
 greater_better: True
 # metric you want to use
-metric_used: "h_f1" 
+metric_used: "loss" 
 drop_last: False
 
 #try to get batch_size as high as possible
@@ -50,7 +50,8 @@ oversampling: 0.1
 # Number of layers in the pretrained model to not train
 freeze_layer: 10
 label_smoothing: 0
-hidden_dropout_prob: 0.1 #default: 0.1
+hidden_dropout_prob: 0.2
+attention_probs_dropout_prob: 0.2
 # Custom Trainer
 custom_trainer: None 
 # Split Ratio
